--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,13 @@
 {
   "version": 2,
+  "builds": [
+    { 
+      "src": "./app.js", 
+      "use": "@vercel/node" }
+  ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/app.js" }
+    { 
+      "src": "/api/(.*)", 
+      "dest": "/" }
   ]
 }
