--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,6 @@
 {
   "version": 2,
-  
   "routes": [
-    { 
-      "src": "/api/(.*)", 
-      "dest": "/" }
+    { "src": "/api/(.*)", "dest": "/app.js" }
   ]
 }
